--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </spam>
                     <img src="./assets/income.svg" alt="Imagem de entradas">
                 </h3>
-                <p>R$ 5.000,00</p>
+                <p id="incomeDisplay">R$ 5.000,00</p>
             </div>
 
             <div class="card">
@@ -38,7 +38,7 @@
                 </span>
                 <img src="./assets/expense.svg" alt="Imagem de Saídas">
                 </h3>
-                <p>R$ 2.000,00</p>
+                <p id="expenseDisplay">R$ 2.000,00</p>
             </div>
 
             <div class="card total">
@@ -48,7 +48,7 @@
                 </spam>
                 <img src="./assets/total.svg" alt="Total">
                 </h3>
-                <p>R$ 3.000,00</p>
+                <p id="totalDisplay">R$ 3.000,00</p>
             </div>
             
         </section>
@@ -71,30 +71,6 @@
 
                 </thead>
                 <tbody>
-                    <tr>
-                        <td class="description">Luz</td>
-                        <td class="expense"> - R$ 500,00</td>
-                        <td class="date">23/01/2021</td>
-                        <td>
-                            <img src="./assets/minus.svg" alt="Remover Transação">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="description">Criação de Website</td>
-                        <td class="income">R$ 5,000,00</td>
-                        <td class="date">23/01/2021</td>
-                        <td>
-                            <img src="./assets/minus.svg" alt="Remover Transação">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="description">Internet</td>
-                        <td class="expense">- R$ 200,00</td>
-                        <td class="date">23/01/2021</td>
-                        <td>
-                            <img src="./assets/minus.svg" alt="Remover Transação">
-                        </td>
-                    </tr>
                 </tbody>
             </table>
         </section>
@@ -109,41 +85,22 @@
                         <div class="input-group">
                             <label class="sr-only" 
                             for="description">Descrição</label>
-                            <input 
-                            type="text" 
-                            id="descriptrion" 
-                            name="description" 
-                            placeholder="Descrição"
-                            />
+                            <input type="text" id="descriptrion" name="description" placeholder="Descrição"/>
                         </div>
 
                         <div class="input-group">
-                            <label class="sr-only" 
-                            for="amount">Valor</label>
-                            <input 
-                            type="number" 
-                            step="0.01" 
-                            id="amount" 
-                            name="amount" 
-                            placeholder="0,00"
-                            />
+                            <label class="sr-only" for="amount">Valor</label>
+                            <input type="number" step="0.01" id="amount" name="amount" placeholder="0,00" />
                             <small class="help">Use o sinal - (negativo) para despesas e , (virgula) para casas decimais</small>
                         </div>
 
                         <div class="input-group">
-                            <label class="sr-only" 
-                            for="date">Data</label>
-                            <input 
-                            type="date" 
-                            id="daten" 
-                            name="date" 
-                            />
+                            <label class="sr-only" for="date">Data</label>
+                            <input type="date" id="daten" name="date"/>
                         </div>
 
                         <div class="input-group actions">
-                            <a href="#" 
-                            onclick="modal.close() "
-                            class="button cancel">Cancelar</a>
+                            <a href="#" onclick="modal.close()" class="button cancel">Cancelar</a>
                             <button>Salvar</button>
                         </div>
                     </form>
@@ -153,20 +110,7 @@
 
     <footer><p>dev.finance$</p></footer>
 
-    <script>
-        const modal = {
-            open(){
-                document.querySelector('.modal-overlay')
-                .classList.add('active')
-                .add('active')
-            },
-            close(){
-                document.querySelector('.modal-overlay')
-                .classList
-                .remove('active')
-            }
-        }
-    </script>
+    <script src="./scripts.js"></script>
 </body>
 
 </html>
