--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </spam>
                     <img src="./assets/income.svg" alt="Imagem de entradas">
                 </h3>
-                <p id="incomeDisplay">R$ 5.000,00</p>
+                <p id="incomeDisplay">R$ 0,00</p>
             </div>
 
             <div class="card">
@@ -38,7 +38,7 @@
                 </span>
                 <img src="./assets/expense.svg" alt="Imagem de Saídas">
                 </h3>
-                <p id="expenseDisplay">R$ 2.000,00</p>
+                <p id="expenseDisplay">R$ 0,00</p>
             </div>
 
             <div class="card total">
@@ -48,7 +48,7 @@
                 </spam>
                 <img src="./assets/total.svg" alt="Total">
                 </h3>
-                <p id="totalDisplay">R$ 3.000,00</p>
+                <p id="totalDisplay">R$ 0,00</p>
             </div>
             
         </section>
@@ -81,11 +81,10 @@
         <div class="modal">
                 <div id="form">
                     <h2>Nova Transação</h2>
-                    <form action="">
+                    <form action="" onsubmit="Form.submit(event)">
                         <div class="input-group">
-                            <label class="sr-only" 
-                            for="description">Descrição</label>
-                            <input type="text" id="descriptrion" name="description" placeholder="Descrição"/>
+                            <label class="sr-only" for="description">Descrição</label>
+                            <input type="text" id="description" name="description" placeholder="Descrição"/>
                         </div>
 
                         <div class="input-group">
@@ -96,7 +95,7 @@
 
                         <div class="input-group">
                             <label class="sr-only" for="date">Data</label>
-                            <input type="date" id="daten" name="date"/>
+                            <input type="date" id="date" name="date"/>
                         </div>
 
                         <div class="input-group actions">
